Resolve "Add a new DataList converter (asBeanList) using Jackson"