@@ -3,7 +3,7 @@ package com.almis.awe.controller;
 import com.almis.awe.model.dto.DataList;
 import com.almis.awe.model.dto.ServiceData;
 import com.almis.awe.model.dto.Theme;
-import com.almis.awe.model.service.DataListService;
+import com.almis.awe.model.util.data.DataListUtil;
 import com.almis.awe.service.QueryService;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -11,10 +11,9 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
@@ -27,14 +26,11 @@ class StaticResourcesControllerTest {
   @Mock
   private QueryService queryService;
 
-  @Mock
-  private DataListService dataListService;
-
   @Test
   void getThemeVariables() throws Exception {
     // Mock
-    when(queryService.launchPrivateQuery(anyString())).thenReturn(new ServiceData().setDataList(new DataList()));
-    when(dataListService.asBeanList(any(), any())).thenReturn(Arrays.asList(new Theme().setName("test"), new Theme().setName("test").setDark(true)));
+    DataList dataList = DataListUtil.fromBeanList(List.of(new Theme().setName("test"), new Theme().setName("test").setDark(true)));
+    when(queryService.launchPrivateQuery(anyString())).thenReturn(new ServiceData().setDataList(dataList));
 
     // Do
     String result = staticResourcesController.getThemeVariables();
